Update content (infographic and dummy vid)

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -100,7 +100,7 @@ a {
   padding: 200px 0;
   text-align: center;
   color: white;
-  background: url("../img/intro-bg.jpg") no-repeat bottom center scroll;
+  background: url("../img/intro-bg.jpg");
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -139,6 +139,16 @@ a {
     color: white;
     outline: none;
     background: rgba(255, 255, 255, 0.1); }
+
+
+#wrapper {
+  background: url("../img/trackula-bg.jpg");
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .content-section {
   padding-top: 150px;
@@ -230,6 +240,17 @@ body {
 #download-btn {
     position: fixed;
     right: 5%;
-    top: 80%;
+    top: 70%;
     z-index: 9999;
+}
+
+video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
 }
