Changing the WHY Section background

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -150,6 +150,10 @@ a {
   background-size: cover;
 }
 
+#why {
+    background: #222;
+}
+
 .content-section {
   padding-top: 150px;
   padding-bottom: 150px; }
