--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,8 +3,18 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
+
+@font-face {
+    font-family: "Lato";
+    src: url("../fonts/Lato-Regular.ttf");
+}
+@font-face {
+    font-family: "Oswald";
+    src: url("../fonts/Oswald-Bold.ttf"); 
+}
+
 body {
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   position: relative;
   width: 100%;
   height: 100%;
@@ -21,7 +31,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   margin: 0 0 35px;
   letter-spacing: 1px;
@@ -47,7 +57,7 @@ a {
     color: #1d9b6c; }
 
 #mainNav {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', sans-serif;
   margin-bottom: 0;
   text-transform: uppercase;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -179,7 +189,7 @@ a {
     height: 350px; } }
 
 .btn {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 400;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -198,15 +208,17 @@ a {
     background-color: #BE3F2C; }
 
 .btn-primary {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
     color: #f8f8f8;
     border: 3px solid #f8f8f8;
     outline: none;
-    background-color: #BE3F2C; }
+    background-color: transparent; }
   .btn-primary:focus, .btn-primary:hover {
-    color: #f8f8f8;
-    border: 3px solid #f8f8f8;
+    color: #222;
+    border: 3px solid #fff;
     outline: none;
-    background-color: #953122; }
+    background-color: #fff; }
 
 ul.banner-social-buttons {
   margin-top: 0; }
