--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -288,3 +288,9 @@ video {
     padding-right: 10px;
     width: 50%;
 }
+
+.tool-icon {
+    padding-top: 40px;
+    padding-bottom: 10px;
+    width: 80px;
+}
